[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Alexandre Delattre <alexandre.delattre.biz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
num-integer = "0.1"
scan_fmt = "0.2.5"
smallvec = "1.4.0"